# Scam-Shield-Bot

./: .gitignore  .replit  main.py  pyproject.toml
client/: requirements.md
client/src/: index.css
client/src/components/: LogsTable.tsx  SettingsPanel.tsx  StatCard.tsx
client/src/hooks/: use-scam-logs.ts
client/src/pages/: Dashboard.tsx
shared/: routes.ts  schema.ts
