[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "discord-py>=2.6.4",
    "fastapi>=0.128.0",
    "openai>=2.14.0",
    "pillow>=12.1.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
